--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.jar=${dist.dir}/RM_Desbravador.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.postgresql-9.2-1002.jdbc4.jar=/Users/marcos/Documents/Libs/JDBC_PostGreSQL/postgresql-9.2-1002.jdbc4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.postgresql-9.2-1002.jdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
