--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,8 @@ file.reference.postgresql-9.2-1002.jdbc4.jar=/Users/marcos/Documents/Libs/JDBC_P
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-9.2-1002.jdbc4.jar}
+    ${file.reference.postgresql-9.2-1002.jdbc4.jar}:\
+    ${libs.swing-layout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
