--- a/parametros.properties
+++ b/parametros.properties
@@ -1,12 +1,13 @@
 #Arquivo de propriedades
-#Tue Aug 27 17:22:43 BRT 2013
+#Wed Aug 28 11:29:44 BRT 2013
 senha=era.a
 dirTitulos=/Users/marcos/Documents
 dirCliente=/Users/marcos/Backup
 19/05/1985=/Users/marcos/Desktop
 dataTitulos=
-porta=7060
+porta=7051
 dataCliente=19/05/1985
-servidor=127.0.0.1
 usuario=dah
-banco=windes4_regente
+servidor=127.0.0.1
+tipoBanco=true
+banco=jesuitas
