--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.postgresql-9.2-1002.jdbc4.jar=/Users/marcos/Documents/Libs/JDBC_PostGreSQL/postgresql-9.2-1002.jdbc4.jar
+file.reference.sqljdbc4.jar=/Users/marcos/Documents/Libs/JDBC_SQLSERVER/sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.postgresql-9.2-1002.jdbc4.jar}:\
+    ${file.reference.sqljdbc4.jar}:\
     ${libs.swing-layout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
