--- a/parametros.properties
+++ b/parametros.properties
@@ -1,13 +1,12 @@
 #Arquivo de propriedades
-#Wed Aug 28 11:29:44 BRT 2013
+#Wed Sep 18 08:22:49 BRT 2013
 senha=era.a
 dirTitulos=/Users/marcos/Documents
 dirCliente=/Users/marcos/Backup
-19/05/1985=/Users/marcos/Desktop
-dataTitulos=
-porta=7051
-dataCliente=19/05/1985
-usuario=dah
-servidor=127.0.0.1
-tipoBanco=true
-banco=jesuitas
+dataTitulos=11/11/1989
+porta=5443
+dataCliente=11/11/1111
+servidor=200.98.220.179
+usuario=hot_hotelariabrasil
+tipoBanco=false
+banco=hot_hotelariabrasil
