--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,21 +27,25 @@ dist.jar=${dist.dir}/RM_Desbravador.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.JTattoo-1.6.9.jar=/Users/marcos/Documents/Libs/Themas/JTattoo-1.6.9.jar
 file.reference.postgresql-9.2-1002.jdbc4.jar=/Users/marcos/Documents/Libs/JDBC_PostGreSQL/postgresql-9.2-1002.jdbc4.jar
 file.reference.sqljdbc4.jar=/Users/marcos/Documents/Libs/JDBC_SQLSERVER/sqljdbc4.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.postgresql-9.2-1002.jdbc4.jar}:\
     ${file.reference.sqljdbc4.jar}:\
-    ${libs.swing-layout.classpath}
+    ${libs.swing-layout.classpath}:\
+    ${file.reference.JTattoo-1.6.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -58,6 +62,15 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=rm_desbravador.visao.RM_Desbravador
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
