--- a/parametros.properties
+++ b/parametros.properties
@@ -1,12 +1,12 @@
 #Arquivo de propriedades
-#Wed Sep 18 08:22:49 BRT 2013
+#Sun Oct 27 15:37:54 BRST 2013
 senha=era.a
-dirTitulos=/Users/marcos/Documents
+dirTitulos=/Users/marcos/Backup
 dirCliente=/Users/marcos/Backup
-dataTitulos=11/11/1989
-porta=5443
-dataCliente=11/11/1111
-servidor=200.98.220.179
-usuario=hot_hotelariabrasil
+dataTitulos=09/10/2013
+porta=7050
+dataCliente=10/10/2013
+servidor=127.0.0.1
+usuario=dah
 tipoBanco=false
-banco=hot_hotelariabrasil
+banco=windes4_arg
