Controle de Skin
Utilização de Skin

--- a/parametros.properties
+++ b/parametros.properties
@@ -1,12 +1,12 @@
 #Arquivo de propriedades
-#Sun Oct 27 15:37:54 BRST 2013
+#Mon Oct 28 11:47:45 BRST 2013
 senha=era.a
 dirTitulos=/Users/marcos/Backup
 dirCliente=/Users/marcos/Backup
-dataTitulos=09/10/2013
-porta=7050
-dataCliente=10/10/2013
-servidor=127.0.0.1
+dataTitulos=28/10/2013
+porta=1433
+dataCliente=28/10/2013
+servidor=192.168.0.90
 usuario=dah
-tipoBanco=false
-banco=windes4_arg
+tipoBanco=true
+banco=windes4_santuario
